Archive2/65/a4c36037e6d827/output
main.cpp:15:7: error: call to 'f' is ambiguous
      f( A() );
      ^
main.cpp:6:6: note: candidate function
void f( const N::A & );
     ^
main.cpp:10:16: note: candidate function
   friend void f( const N::A & );
               ^
1 error generated.
